--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,147 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+body {
+  font-family: 'Space Grotesk', sans-serif;
+  font-size: 20px;
+}
+
+h1,
+h2,
+h3,
+ul,
+ol,
+p {
+  padding: 0;
+  margin: 0;
+}
+
+ul,
+ol,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+button {
+  cursor: pointer;
+  background-color: inherit;
+}
+
+.wrapper {
+  min-height: 100%;
+  overflow: clip;
+}
+
+.account {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+}
+
+.account__left-side {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 49.444444%;
+          flex: 0 0 49.444444%;
+  /* 712/1440 */
+  font-family: 'Manrope', sans-serif;
+  color: #ffffff;
+}
+
+.account__left-side::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url("../img/image.jpg") center/cover no-repeat;
+}
+
+.account__title {
+  max-width: 309px;
+  margin-bottom: 21px;
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 1.15;
+  /* 46/40 */
+}
+
+.account__text {
+  line-height: 1.35;
+  /* 27/20 */
+}
+
+.account__title,
+.account__text {
+  position: relative;
+}
+
+.account__left-side,
+.account__content {
+  padding: 76px 60px;
+}
+
+.account__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.account__inset {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-width: 430px;
+  max-width: 59.065934%;
+  /* 430/728 */
+  margin: 0 auto;
+  min-height: 100%;
+}
+
+.account__logo {
+  padding-left: 32px;
+  font-family: 'Manrope', sans-serif;
+  font-weight: 600;
+  line-height: 1.35;
+  /* 27/20 */
+  color: #1d1d1b;
+  background: url("../img/icons/Frame.svg") left/24px no-repeat;
+}
+
+.form__title {
+  margin-bottom: 5px;
+  font-family: 'Manrope', sans-serif;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 1.36;
+  /* 49/36 */
+}
+
+.form__text {
+  margin-bottom: 30px;
+  line-height: 1.3;
+  /* 26/20 */
+}
+/*# sourceMappingURL=main.css.map */
