--- a/css/main.css
+++ b/css/main.css
@@ -144,4 +144,78 @@ button {
   line-height: 1.3;
   /* 26/20 */
 }
+
+.form__items {
+  display: -ms-grid;
+  display: grid;
+  gap: 15px;
+  margin-bottom: 30px;
+}
+
+.form__input {
+  padding: 0;
+  height: 48px;
+  border: transparent;
+  outline: none;
+  border-bottom: 1px solid #e0e0e0;
+  cursor: pointer;
+  -webkit-transition: border-bottom 0.8s cubic-bezier(0.4, 0, 0.2, 1), padding-left 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-bottom 0.8s cubic-bezier(0.4, 0, 0.2, 1), padding-left 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__input:hover, .form__input:focus {
+  border-bottom: 1px solid #000000;
+}
+
+.form__input:focus {
+  padding-left: 20px;
+}
+
+.form__input::-webkit-input-placeholder {
+  line-height: 1.3;
+  /* 26/20 */
+  color: #000000;
+  -webkit-transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__input:-ms-input-placeholder {
+  line-height: 1.3;
+  /* 26/20 */
+  color: #000000;
+  -webkit-transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__input::-ms-input-placeholder {
+  line-height: 1.3;
+  /* 26/20 */
+  color: #000000;
+  -webkit-transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__input::placeholder {
+  line-height: 1.3;
+  /* 26/20 */
+  color: #000000;
+  -webkit-transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__input:focus::-webkit-input-placeholder {
+  opacity: 0;
+}
+
+.form__input:focus:-ms-input-placeholder {
+  opacity: 0;
+}
+
+.form__input:focus::-ms-input-placeholder {
+  opacity: 0;
+}
+
+.form__input:focus::placeholder {
+  opacity: 0;
+}
 /*# sourceMappingURL=main.css.map */
