--- a/css/main.css
+++ b/css/main.css
@@ -218,4 +218,45 @@ button {
 .form__input:focus::placeholder {
   opacity: 0;
 }
+
+.form__actions {
+  display: -ms-grid;
+  display: grid;
+  gap: 26px;
+}
+
+.form__buttom {
+  padding: 18px 15px;
+  font-size: 16px;
+  line-height: 1.25;
+  /* 20/16 */
+  color: #ffffff;
+  background: #060606;
+  border-radius: 6px;
+  border-color: transparent;
+  -webkit-transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1), color 0.5s cubic-bezier(0.4, 0, 0.2, 1), border-color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1), color 0.5s cubic-bezier(0.4, 0, 0.2, 1), border-color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__buttom:hover, .form__buttom:focus {
+  background-color: #ffffff;
+  color: black;
+  border-color: black;
+}
+
+.form__or {
+  line-height: 1.3;
+  /* 26/20 */
+  text-align: center;
+  color: #7a7a7a;
+}
+
+.form__google {
+  padding: 18px 15px;
+  line-height: 1.3;
+  /* 26/20 */
+  color: #000000;
+  border: 1px solid #d9d9d9;
+  border-radius: 6px;
+}
 /*# sourceMappingURL=main.css.map */
