--- a/sass/components/_account-page.scss
+++ b/sass/components/_account-page.scss
@@ -123,3 +123,41 @@
         opacity: 0;
     }
 }
+.form__actions {
+    display: grid;
+    gap: 26px;
+}
+.form__buttom {
+    padding: 18px 15px;
+
+    font-size: 16px;
+    line-height: 1.25; /* 20/16 */
+    color: #ffffff;
+    background: #060606;
+    border-radius: 6px;
+    border-color: transparent;
+
+    transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+        color 0.5s cubic-bezier(0.4, 0, 0.2, 1), border-color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background-color: #ffffff;
+        color: black;
+        border-color: black;
+    }
+}
+.form__or {
+    line-height: 1.3; /* 26/20 */
+
+    text-align: center;
+    color: #7a7a7a;
+}
+.form__google {
+    padding: 18px 15px;
+
+    line-height: 1.3; /* 26/20 */
+    color: #000000;
+    border: 1px solid #d9d9d9;
+    border-radius: 6px;
+}
