--- a/css/main.css
+++ b/css/main.css
@@ -245,18 +245,67 @@ button {
 }
 
 .form__or {
+  position: relative;
   line-height: 1.3;
   /* 26/20 */
   text-align: center;
   color: #7a7a7a;
 }
 
+.form__or::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #e0e0e0;
+}
+
+.form__span {
+  position: relative;
+  background-color: #ffffff;
+  padding: 0px 5px;
+}
+
 .form__google {
   padding: 18px 15px;
-  line-height: 1.3;
-  /* 26/20 */
-  color: #000000;
+  text-align: center;
   border: 1px solid #d9d9d9;
   border-radius: 6px;
+  -webkit-transition: border 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__google:hover, .form__google:focus {
+  border: 1px solid black;
+}
+
+.form__google-span {
+  padding-left: 40px;
+  line-height: 1.3;
+  /* 26/20 */
+  text-align: left;
+  background: url("../img/icons/frame2.svg") left/24px no-repeat;
+}
+
+.account__login {
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.25;
+  /* 20/16 */
+}
+
+.account__login-link {
+  margin-left: 8px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.25;
+  /* 20/16 */
+  text-decoration: underline;
+}
+
+.account__login-link:hover, .account__login-link:focus {
+  text-decoration: none;
 }
 /*# sourceMappingURL=main.css.map */
