--- a/sass/components/_account-page.scss
+++ b/sass/components/_account-page.scss
@@ -207,3 +207,19 @@
         text-decoration: none;
     }
 }
+// Responsive
+@media screen and (max-width: 1030px) {
+    .account {
+        display: block;
+    }
+    .account__left-side,
+    .account__content {
+        // padding: 2.27rem 5.16%;
+        padding: 15px;
+    }
+    .account__inset {
+        gap: 34px;
+        min-width: 0;
+        max-width: none;
+    }
+}
