--- a/css/main.css
+++ b/css/main.css
@@ -127,8 +127,6 @@ button {
   line-height: 1.35;
   /* 27/20 */
   color: #1d1d1b;
-  -webkit-transition-delay: 0.5s;
-          transition-delay: 0.5s;
   background: url("../img/icons/Frame.svg") left/24px no-repeat;
 }
 
@@ -309,6 +307,68 @@ button {
 
 .account__login-link:hover, .account__login-link:focus {
   text-decoration: none;
+}
+
+.account__left-side::before {
+  -webkit-transform: translate(-100%, 0px);
+          transform: translate(-100%, 0px);
+}
+
+.loaded .account__left-side::before {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  -webkit-transition: all 2s ease 1.3s;
+  transition: all 2s ease 1.3s;
+}
+
+.account__form > *,
+.account__logo,
+.account__login {
+  -webkit-transform: translate(0px, 30px);
+          transform: translate(0px, 30px);
+  opacity: 0;
+}
+
+.loaded .account__form > *,
+.loaded .account__logo,
+.loaded .account__login {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
+  -webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
+  transition: opacity 1s ease, -webkit-transform 1s ease;
+  transition: transform 1s ease, opacity 1s ease;
+  transition: transform 1s ease, opacity 1s ease, -webkit-transform 1s ease;
+}
+
+.loaded .account__logo {
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
+}
+
+.loaded .form__title {
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
+}
+
+.loaded .form__text {
+  -webkit-transition-delay: 0.7s;
+          transition-delay: 0.7s;
+}
+
+.loaded .form__items {
+  -webkit-transition-delay: 0.9s;
+          transition-delay: 0.9s;
+}
+
+.loaded .form__actions {
+  -webkit-transition-delay: 1.1s;
+          transition-delay: 1.1s;
+}
+
+.loaded .account__login {
+  -webkit-transition-delay: 1.3s;
+          transition-delay: 1.3s;
 }
 
 @media screen and (max-width: 1030px) {
