--- a/sass/components/_account-page.scss
+++ b/sass/components/_account-page.scss
@@ -207,7 +207,52 @@
         text-decoration: none;
     }
 }
+
+// Animate
+///////////////////////////////////////////////////////
+
+.account__left-side::before {
+    transform: translate(-100%, 0px);
+}
+.loaded .account__left-side::before {
+    transform: translate(0px, 0px);
+    transition: all 2s ease 1.3s;
+}
+.account__form > *,
+.account__logo,
+.account__login {
+    transform: translate(0px, 30px);
+    opacity: 0;
+}
+.loaded .account__form > *,
+.loaded .account__logo,
+.loaded .account__login {
+    transform: translate(0px, 0px);
+    opacity: 1;
+    transition: transform 1s ease, opacity 1s ease;
+}
+.loaded .account__logo {
+    transition-delay: 0.3s;
+}
+.loaded .form__title {
+    transition-delay: 0.5s;
+}
+.loaded .form__text {
+    transition-delay: 0.7s;
+}
+.loaded .form__items {
+    transition-delay: 0.9s;
+}
+.loaded .form__actions {
+    transition-delay: 1.1s;
+}
+.loaded .account__login {
+    transition-delay: 1.3s;
+}
+
 // Responsive
+//////////////////////////////////////////////////////
+
 @media screen and (max-width: 1030px) {
     .account {
         display: block;
